# dynamic_fastapi

./: .gitignore  pyproject.toml
config/: dynamic_fastapi.yml
data/: seeds.yml
dynamic_fastapi/: __init__.py  __main__.py
dynamic_fastapi/app/: __init__.py  config.py  depends.py  windows.py
dynamic_fastapi/database/: __init__.py  collection.py  task_types.py  windows.py
dynamic_fastapi/model/: __init__.py  base.py  extension.py  task_type.py  window.py
tests/unit/: __init__.py
tests/unit/app/: test_config.py  test_windows.py
tests/unit/database/: test_task_types.py  test_windows.py
tests/unit/model/: __init__.py  test__package.py  test_base.py  test_extension.py  test_task_type.py  test_window.py
